Attempt to put a mac os x profile to it.